Updated a couple methods that are deprecated starting in Java 9